Closed
Bug 890841
Opened 9 years ago
Closed 9 years ago
Intermittent dom/workers/test/test_closeOnGC.html | application crashed [@ libsystem_c.dylib + 0x19bd9]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: cbook, Assigned: bent.mozilla)
References
()
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
8.80 KB,
patch
|
bent.mozilla
:
review+
akeybl
:
approval-mozilla-aurora+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
https://tbpl.mozilla.org/php/getParsedLog.php?id=25006293&tree=Mozilla-Inbound Rev5 MacOSX Mountain Lion 10.8 mozilla-inbound opt test mochitest-4 on 2013-07-07 23:37:05 PDT for push 8c48deec0349 slave: talos-mtnlion-r5-060 Intermittent TEST-UNEXPECTED-FAIL | /tests/dom/workers/test/test_closeOnGC.html | Exited with code 1 during test run and PROCESS-CRASH | /tests/dom/workers/test/test_closeOnGC.html | application crashed [@ libsystem_c.dylib + 0x19bd9 INFO - Crash dump filename: /var/folders/hx/knpwz1w94cz73yt8f_8zrmh000000w/T/tmptzexCe/minidumps/EFD93688-8D49-4538-9286-90F56FE44074.dmp 23:40:32 INFO - Operating system: Mac OS X 23:40:32 INFO - 10.8.0 12A269 23:40:32 INFO - CPU: amd64 23:40:32 INFO - family 6 model 42 stepping 7 23:40:32 INFO - 8 CPUs 23:40:32 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS 23:40:32 INFO - Crash address: 0x0 23:40:32 INFO - Thread 0 (crashed) 23:40:32 INFO - 0 libsystem_c.dylib + 0x19bd9 23:40:32 INFO - rbx = 0x0000000000000000 r12 = 0x0000000100522b28 23:40:32 INFO - r13 = 0x0000000100522b50 r14 = 0x0000000000000000 23:40:32 INFO - r15 = 0x00000001263b5000 rip = 0x00007fff8f85fbd9 23:40:32 INFO - rsp = 0x00007fff5fbfd320 rbp = 0x00007fff5fbfd360 23:40:32 INFO - Found by: given as instruction pointer in context 23:40:32 INFO - 1 libnss3.dylib!PR_Lock + 0xd 23:40:32 INFO - rip = 0x000000010111285e rsp = 0x00007fff5fbfd370 23:40:32 INFO - rbp = 0x00007fff5fbfd380 23:40:32 INFO - Found by: stack scanning 23:40:32 INFO - 2 XUL!mozilla::dom::workers::WorkerPrivateParent<mozilla::dom::workers::WorkerPrivate>::Resume(JSContext*) [Mutex.h:8c48deec0349 : 70 + 0x7] 23:40:32 INFO - rip = 0x0000000101dff3e9 rsp = 0x00007fff5fbfd390 23:40:32 INFO - rbp = 0x00007fff5fbfd3c0 23:40:32 INFO - Found by: stack scanning 23:40:32 INFO - 3 XUL!(anonymous namespace)::SynchronizeAndResumeRunnable::Run() [WorkerPrivate.cpp:8c48deec0349 : 1455 + 0x4] 23:40:32 INFO - rbx = 0x00000001220d0800 r12 = 0x0000000100522b28 23:40:32 INFO - r14 = 0x00000001077491c0 r15 = 0x00007fff7564a4b0 23:40:32 INFO - rip = 0x0000000101dfcf09 rsp = 0x00007fff5fbfd3d0 23:40:32 INFO - rbp = 0x00007fff5fbfd420 23:40:32 INFO - Found by: call frame info 23:40:32 INFO - 4 XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:8c48deec0349 : 631 + 0x5] 23:40:32 INFO - rbx = 0x0000000100522b00 r12 = 0x0000000100522b28 23:40:32 INFO - r14 = 0x00000001077a78e8 r15 = 0x0000000100522b00 23:40:32 INFO - rip = 0x00000001029a1b4d rsp = 0x00007fff5fbfd430 23:40:32 INFO - rbp = 0x00007fff5fbfd4c0 23:40:32 INFO - Found by: call frame info 23:40:32 INFO - 5 XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:8c48deec0349 : 188 + 0xd] 23:40:32 INFO - rbx = 0x0000000000000000 r12 = 0x00000000001c6e75 23:40:32 INFO - r13 = 0x00007fff5fbfd4d7 r14 = 0x0000000000000014 23:40:32 INFO - r15 = 0x0000000100522b00 rip = 0x0000000102957f44 Skipping 3939 lines... 23:40:32 INFO - 0x7fff8e00a000 - 0x7fff8e99bfff CoreGraphics ??? 23:40:32 INFO - 0x7fff8e99c000 - 0x7fff8e9a0fff libGIF.dylib ??? 23:40:32 INFO - 0x7fff8e9a1000 - 0x7fff8e9dcfff LDAP ??? 23:40:32 INFO - 0x7fff8e9dd000 - 0x7fff8e9fcfff libresolv.9.dylib ??? 23:40:32 INFO - 0x7fff8eaa5000 - 0x7fff8eae8fff Bom ??? 23:40:32 INFO - 0x7fff8eae9000 - 0x7fff8ed68fff AOSKit ??? 23:40:32 INFO - 0x7fff8ed6f000 - 0x7fff8edcbfff CoreLocation ??? 23:40:32 INFO - 0x7fff8edcc000 - 0x7fff8edf8fff libRIP.A.dylib ??? 23:40:32 INFO - 0x7fff8edf9000 - 0x7fff8eed3fff Backup ??? 23:40:32 INFO - 0x7fff8ef3b000 - 0x7fff8ef3cfff libsystem_sandbox.dylib ??? 23:40:32 INFO - 0x7fff8ef3d000 - 0x7fff8ef3dfff Accelerate ??? 23:40:32 INFO - 0x7fff8ef3e000 - 0x7fff8ef3efff CoreServices ??? 23:40:32 INFO - 0x7fff8ef90000 - 0x7fff8efaffff ChunkingLibrary ??? 23:40:32 INFO - 0x7fff8efb3000 - 0x7fff8efbafff libcopyfile.dylib ??? 23:40:32 INFO - 0x7fff8efbb000 - 0x7fff8efbbfff libOpenScriptingUtil.dylib ??? 23:40:32 INFO - 0x7fff8efbc000 - 0x7fff8efbdfff libsystem_blocks.dylib ??? 23:40:32 INFO - 0x7fff8efbe000 - 0x7fff8f2edfff HIToolbox ??? 23:40:32 INFO - 0x7fff8f2ee000 - 0x7fff8f326fff libtidy.A.dylib ??? 23:40:32 INFO - 0x7fff8f327000 - 0x7fff8f3a8fff Metadata ??? 23:40:32 INFO - 0x7fff8f3a9000 - 0x7fff8f3d5fff QuartzFilters ??? 23:40:32 INFO - 0x7fff8f3d6000 - 0x7fff8f43efff libvDSP.dylib ??? 23:40:32 INFO - 0x7fff8f43f000 - 0x7fff8f44afff ServiceManagement ??? 23:40:32 INFO - 0x7fff8f47e000 - 0x7fff8f48bfff HelpData ??? 23:40:32 INFO - 0x7fff8f48c000 - 0x7fff8f499fff NetAuth ??? 23:40:32 INFO - 0x7fff8f553000 - 0x7fff8f56dfff CoreMediaAuthoring ??? 23:40:32 INFO - 0x7fff8f56e000 - 0x7fff8f807fff JavaScriptCore ??? 23:40:32 INFO - 0x7fff8f808000 - 0x7fff8f80cfff libCGXType.A.dylib ??? 23:40:32 INFO - 0x7fff8f846000 - 0x7fff8f912fff libsystem_c.dylib ??? 23:40:32 INFO - 0x7fff8f913000 - 0x7fff8f983fff ISSupport ??? 23:40:32 INFO - 0x7fff8f984000 - 0x7fff8f9d3fff libFontRegistry.dylib ??? 23:40:32 INFO - 0x7fff8f9d4000 - 0x7fff8fa3dfff libstdc++.6.dylib ??? 23:40:32 INFO - 0x7fff8fa3e000 - 0x7fff901e6fff CoreAUC ??? 23:40:32 INFO - 0x7fff901e7000 - 0x7fff901edfff libunwind.dylib ??? 23:40:32 INFO - 0x7fff90770000 - 0x7fff90776fff libmacho.dylib ??? 23:40:32 INFO - 0x7fff90777000 - 0x7fff9083cfff CoreUI ??? 23:40:32 INFO - 0x7fff90894000 - 0x7fff9089dfff CommerceCore ???
Updated•9 years ago
|
Crash Signature: [@ libsystem_c.dylib@0x19bd9]
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 2•9 years ago
|
||
Here's some more of the same crash that got added to bug 881404 (which is a different issue): https://tbpl.mozilla.org/php/getParsedLog.php?id=24069292&full=1&branch=mozilla-inbound https://tbpl.mozilla.org/php/getParsedLog.php?id=24180814&full=1&branch=fx-team https://tbpl.mozilla.org/php/getParsedLog.php?id=24354126&full=1&branch=mozilla-inbound These all have GCHelperThread::doSweep() on the stack in another thread, which is suggestive of some kind of race condition with GC sweeping.
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•9 years ago
|
Severity: normal → critical
Hardware: x86 → x86_64
Summary: Intermittent TEST-UNEXPECTED-FAIL & Crash | /tests/dom/workers/test/test_closeOnGC.html | Exited with code 1 during test run → Intermittent dom/workers/test/test_closeOnGC.html | application crashed [@ libsystem_c.dylib + 0x19bd9]
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 8•9 years ago
|
||
This looks like Kyle's SynchronizeAndResumeRunnable thing...
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 30•9 years ago
|
||
I landed this as part of bug 643325, it has r=sicking.
Assignee | ||
Comment 31•9 years ago
|
||
Let's hope this is fixed now.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Comment 32•9 years ago
|
||
Does this patch depend on bug 643325 or is it something that could be uplifted to other branches on its own?
status-firefox25:
--- → affected
status-firefox26:
--- → affected
status-firefox27:
--- → fixed
status-firefox-esr24:
--- → wontfix
Assignee | ||
Comment 33•9 years ago
|
||
I think it could be uplifted. It might have some merge conflicts but it doesn't really require anything from bug 643325 to work.
Comment 34•9 years ago
|
||
In that case, can you please request approval? :)
Assignee | ||
Comment 35•9 years ago
|
||
Comment on attachment 813265 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 854739 User impact if declined: Random crashes when navigating forward and back with pages that use workers. Testing completed (on m-c, etc.): m-c, tinderbox looks much happier Risk to taking this patch (and alternatives if risky): None that I can think of String or IDL/UUID changes made by this patch: None
Attachment #813265 -
Flags: approval-mozilla-beta?
Attachment #813265 -
Flags: approval-mozilla-aurora?
Comment 36•9 years ago
|
||
Comment on attachment 813265 [details] [diff] [review] Patch Firefox 24 regression, and a low risk fix to the intermittent failures. Approving for branches.
Attachment #813265 -
Flags: approval-mozilla-beta?
Attachment #813265 -
Flags: approval-mozilla-beta+
Attachment #813265 -
Flags: approval-mozilla-aurora?
Attachment #813265 -
Flags: approval-mozilla-aurora+
Comment 37•9 years ago
|
||
Yeah, a little unbitrotting required. We'll see how going the naive route goes... https://hg.mozilla.org/releases/mozilla-aurora/rev/2789478ca50d https://hg.mozilla.org/releases/mozilla-beta/rev/0760d9fa7bc4
Comment 38•9 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #37) > We'll see how going the naive route goes... Not so good. Backed out. https://hg.mozilla.org/releases/mozilla-aurora/rev/577a375a3217 https://hg.mozilla.org/releases/mozilla-beta/rev/9d4f9571af2f
Flags: needinfo?(bent.mozilla)
Keywords: branch-patch-needed
Comment 39•9 years ago
|
||
Going to go ahead and say that this isn't going to make it to beta at this point given where we are in the cycle. Ben, still possible to get something onto Aurora (Gecko26)?
Assignee | ||
Comment 40•9 years ago
|
||
Hm, what problems did the patches in comment 37 have?
Flags: needinfo?(bent.mozilla)
Comment 41•9 years ago
|
||
https://tbpl.mozilla.org/php/getParsedLog.php?id=28880806&tree=Mozilla-Beta
Assignee | ||
Comment 42•9 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/50750097f7b3 https://hg.mozilla.org/releases/mozilla-beta/rev/8321acab4809
Assignee | ||
Updated•9 years ago
|
Keywords: branch-patch-needed
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•4 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•