Bug 890841 - Intermittent dom/workers/test/test_closeOnGC.html | application crashed [@ libsystem_c.dylib + 0x19bd9]. r=sicking, a=akeybl