dom/workers/WorkerPrivate.h
@@ -6,7 +6,6 @@
 #ifndef mozilla_dom_workers_workerprivate_h__
 #define mozilla_dom_workers_workerprivate_h__
 
-#include "mozilla/Attributes.h"
 #include "Workers.h"
 
 #include "nsIContentSecurityPolicy.h"
@@ -17,13 +16,13 @@
 
 #include "mozilla/Assertions.h"
 #include "mozilla/CondVar.h"
-#include "mozilla/Mutex.h"
 #include "mozilla/TimeStamp.h"
 #include "nsAutoPtr.h"
 #include "nsCOMPtr.h"
 #include "nsEventQueue.h"
 #include "nsStringGlue.h"
 #include "nsTArray.h"
+#include "nsThreadUtils.h"
 #include "nsTPriorityQueue.h"
 #include "StructuredCloneTags.h"
 
@@ -36,9 +35,8 @@ class nsIChannel;
 class nsIDocument;
 class nsIPrincipal;
 class nsIScriptContext;
-class nsIURI;
-class nsPIDOMWindow;
 class nsITimer;
+class nsIURI;
 
 namespace JS {
 class RuntimeStats;
@@ -233,6 +231,8 @@ public:
 template <class Derived>
 class WorkerPrivateParent : public EventTarget
 {
+  class SynchronizeAndResumeRunnable;
+
 public:
   struct LocationInfo
   {
@@ -270,6 +270,7 @@ private:
 
   // Only used for top level workers.
   nsTArray<nsRefPtr<WorkerRunnable> > mQueuedRunnables;
+  nsRevocableEventPtr<SynchronizeAndResumeRunnable> mSynchronizeRunnable;
 
   // Only for ChromeWorkers without window and only touched on the main thread.
   nsTArray<nsCString> mHostObjectURIs;
